k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bmi-service
  namespace: bmi-namespace
spec:
  type: LoadBalancer
  selector:
    app: bmi-app
  ports:
  - port: 80
    targetPort: 5000
